# deepseek-ocr-eval

./: .gitignore  EXPERIMENT_A_NOISE_ROBUSTNESS_RESULTS.md  EXPERIMENT_B_RENDERING_ABLATIONS.md  EXPERIMENT_D_TRUNCATION_VS_VISION_RESULTS.md  MECHANISTIC_HYPOTHESES.md  README.md  eval.py  fox_en_1_gt.txt  pyproject.toml
baselines/: __init__.py  config.py  meanpool.py  truncation.py  vision.py
baselines/utils/: __init__.py  generation.py  image.py  model.py
experiment/: __init__.py  finewiki_experiment.py  quality_experiment.py  questions.json  render_documents.py  run_all_configs.py  run_experiment.py  utils.py
experiment/data/font_sans/: invoice.txt
experiment/data/font_serif/: meeting_minutes.txt
experiment/data/size_medium/: product_spec.txt
experiment/data/size_small/: employee_record.txt
experiment/results/: comparison_colors_small.json  comparison_fonts_small.json  comparison_sizes_small.json  comparison_small.json  compression_base.json  compression_small.json  compression_tiny.json  context_experiment_small.json  context_experiment_small_color_blue.json  context_experiment_small_color_dark.json  context_experiment_small_color_default.json  context_experiment_small_color_low_contrast.json  context_experiment_small_color_sepia.json  context_experiment_small_font_mono.json  context_experiment_small_font_sans.json  context_experiment_small_font_serif.json  context_experiment_small_size_large.json  context_experiment_small_size_medium.json  context_experiment_small_size_small.json
